[tool.poetry]
name = "broad_dagster_utils"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/broadinstitute/dagster-utils"
version = "2.0.0-alpha.3"

description = "Common utilities and objects for building Dagster pipelines"
authors = ["Monster Dev <monsterdev@broadinstitute.org>"]

packages = [
	{ include = "dagster_utils" }
]

include = [
	"dagster_utils/py.typed"
]

[tool.poetry.dependencies]
python = "~3.10"
dagster = "^0.14.0"
google-cloud-storage = "^1.38.0"
PyYAML = "^6.0.2"
pendulum = "2.1.2"
google-cloud-bigquery = "^3.27.0"
slackclient = "^2.9.3"
argo-workflows = "^5.0.0"
data-repo-client = "^1.134.0"
# remove when you upgrade to python 3.12
# this version of setuptools is vulnerable, maybe I don't need to install it anymore?
# setuptools = "^57.5.0"
sqlalchemy = "^1.4.54"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
mypy = "^0.812"
pre-commit = "^2.11.0"
pytest = "^6.2.1"

[tool.poetry.urls]
"Release Info" = "https://github.com/broadinstitute/dagster-utils/releases"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
aggressive = 1
exclude = ".pytest_cache,__pycache__"
max_line_length = 120
